--- a/lab/repita/index.htm
+++ b/lab/repita/index.htm
@@ -70,7 +70,9 @@
 
 <a class="noline" href="proximities.htm" target="prx">PROXIMITIES</a>
 <img src="blank.gif" height="1pt" width="66pt">
-<a class="noline" href="rbtcntrbutns.htm" target="prx">AI HELPS</a>
+<a class="noline" href="camps/immo/index.htm" target="cmps">actions</a>
+<img src="blank.gif" height="1pt" width="66pt">
+<a class="noline" href="rbtcntrbutns.htm" target="prx">AI OPINIONS</a>
 
 </b></font>
 
@@ -86,7 +88,7 @@
 
 <a class="noline" href="../eulab/index.htm" target="elb">EULAB</a>
 <img src="blank.gif" width="77pt" height="1pt">
-</i><a class="noline" href="hurrah-for-danilo.htm" target="hurrah-for-danilo">! HURRAH for DANILO !</a><i>
+</i><a class="noline" href="hurrah-for-danilo.htm" target="hurrah-for-danilo">! HURRAH !</a><i>
 <img src="blank.gif" width="77pt" height="1pt">
 <a class="noline" href="../index.htm" target="hpr">HYPER</a>
 
