--- a/lab/mol/condmol.htm
+++ b/lab/mol/condmol.htm
@@ -5,6 +5,8 @@
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="hyperlinker_style.css" type="text/css">
 
 <meta name="description" content="Mailing List ABRUZZESI - Forums Abruzzesi On Line. Per essere informato su ciò che avviene nella tua regione, per divulgare le tue idee e le tue iniziative, per ampliare le tue conoscenze e stringere amicizie, ecco i Forums Abruzzesi: CHIETI, L'AQUILA, PESCARA, TERAMO & ABRUZZO. Centro di Comunicazione Abruzzese.">
