--- a/lab/mol/faq.htm
+++ b/lab/mol/faq.htm
@@ -2,12 +2,14 @@
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="hyperlinker_style.css" type="text/css">
 
-<meta name="description" content="La mediazione: uno strumento per creare alleanze. La mediazione Ë uno degli strumenti pi˘ funzionali per costruire solide relazioni, negoziare affari,
-superare difficolt‡, comunicare efficacemente.">
+<meta name="description" content="La mediazione: uno strumento per creare alleanze. La mediazione √® uno degli strumenti pi√π funzionali per costruire solide relazioni, negoziare affari,
+superare difficolt√†, comunicare efficacemente.">
 
-<meta name="keywords" content="mediazione, meditazione, consulenza, giustizia alternativa, conciliazione, arbitrato, negoziato, comunicazione, Camera Arbitrale, giustizia, pace, autotutela, terzo neutrale, mediator, mediatrix, consulenza aziendale, azienda, costi, famiglia, divorzio, separazione, coniugi, figli, accordi, dialogo, avvocato, mediazione familiare, conflitto, lite, disputa, problema, giudice di pace, costruzione, atto, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ‡, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, spiritual growth, society, mediazione trasformativa, trasformative mediation, The Conflict Research Consortium, University of Colorado, Dispute Resolution, promise, Bush, Folger, magic, Tom Crum,  Roger Fisher, William Ury, Gianvittorio Pisapia, Daniela Antonucci, Pietro Gennaro, Stefano Castelli, Gullotta, Santi, Haynes, Isabella Buzzi, Pinna Savina, Antonio Tiberio,  Francesco Carnevelli, Marina Lucardi, Christoph Besemer,  Kate Keenan, Marta Castiglioni, Tao dell'armonia,  Joel Edelman, Mary Beth Crain, guerrieri del cuore, Danaan Parry, Stephen Covey, Dale Carnegie, dialogo,  Vittorio D'Amato, Education,  Donna Crawford, Richard Bodine">
+<meta name="keywords" content="mediazione, meditazione, consulenza, giustizia alternativa, conciliazione, arbitrato, negoziato, comunicazione, Camera Arbitrale, giustizia, pace, autotutela, terzo neutrale, mediator, mediatrix, consulenza aziendale, azienda, costi, famiglia, divorzio, separazione, coniugi, figli, accordi, dialogo, avvocato, mediazione familiare, conflitto, lite, disputa, problema, giudice di pace, costruzione, atto, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ√†, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, spiritual growth, society, mediazione trasformativa, trasformative mediation, The Conflict Research Consortium, University of Colorado, Dispute Resolution, promise, Bush, Folger, magic, Tom Crum,  Roger Fisher, William Ury, Gianvittorio Pisapia, Daniela Antonucci, Pietro Gennaro, Stefano Castelli, Gullotta, Santi, Haynes, Isabella Buzzi, Pinna Savina, Antonio Tiberio,  Francesco Carnevelli, Marina Lucardi, Christoph Besemer,  Kate Keenan, Marta Castiglioni, Tao dell'armonia,  Joel Edelman, Mary Beth Crain, guerrieri del cuore, Danaan Parry, Stephen Covey, Dale Carnegie, dialogo,  Vittorio D'Amato, Education,  Donna Crawford, Richard Bodine">
 
 <TITLE>MediazioneOnLine</TITLE>
 
@@ -38,18 +40,18 @@ superare difficolt‡, comunicare efficacemente.">
 
 <ul>
 
-<li><b>Cosa Ë la mediazione?</b>
+<li><b>Cosa √® la mediazione?</b>
 <br><br>
 
-La mediazione Ë un procedimento centrato sulla comunicazione e sulla negoziazione
+La mediazione √® un procedimento centrato sulla comunicazione e sulla negoziazione
 per costruire solide relazioni, gestire affari,
-superare difficolt‡, comunicare efficacemente. Esso puÚ venire facilitato dalla presenza di una terza persona neutrale, il mediatore, o puÚ essere autonomamente appreso e gestito. Il processo di mediazione mira a mettere a fuoco i problemi
-concreti e reali e le effettive difficolt‡ che
+superare difficolt√†, comunicare efficacemente. Esso pu√≤ venire facilitato dalla presenza di una terza persona neutrale, il mediatore, o pu√≤ essere autonomamente appreso e gestito. Il processo di mediazione mira a mettere a fuoco i problemi
+concreti e reali e le effettive difficolt√† che
 devono essere appianate, ed a consentire
 a ciascuna persona di manifestare i
 propri interessi e bisogni, grazie al ruolo
 centrale che viene dato al dialogo e al
-confronto pacifico e costruttivo. Scopo ultimo della mediazione Ë quello di giungere ad un accordo impegnativo, responsabile, concordato, nel rispetto degli interessi dei singoli e della situazione nella quale essi intervengono.
+confronto pacifico e costruttivo. Scopo ultimo della mediazione √® quello di giungere ad un accordo impegnativo, responsabile, concordato, nel rispetto degli interessi dei singoli e della situazione nella quale essi intervengono.
 
 <br><br><br>
 
@@ -58,7 +60,7 @@ confronto pacifico e costruttivo. Scopo ultimo della mediazione Ë quello di giun
 Il mediatore ha il compito di agevolare il
 dialogo e di aiutare le persone, che a lui si
 rivolgono, a manifestare i propri interessi,
-ad individuare esigenze, necessit‡ e
+ad individuare esigenze, necessit√† e
 desideri, e quindi sviluppare relative
 proposte valide, per raggiungere infine una
 determinazione con se stesso od un accordo con un'altra persona pienamente soddisfacenti. 
@@ -67,26 +69,26 @@ determinazione con se stesso od un accordo con un'altra persona pienamente soddi
 
 <li><b>Cosa offre MediazioneOnLine?</b>
 <br><br>
-MediazioneOnLine offre un servizio di mediazione tramite Internet (e.mail, chat, web) allo scopo di agevolare la comunicazione tra persone che operano sulla Rete o che preferiscono la consulenza on line. MediazioneOnLine intende offrire agli utenti il vantaggioso abbinamento dei due strumenti che, per loro natura, sono caratterizzati, entrambi, da: rapidit‡, semplicit‡, efficacia. Gli operatori virtuali possono dunque avvantaggiarsi dell'intervento di un terzo neutrale che agisca nello stesso ambiente. 
+MediazioneOnLine offre un servizio di mediazione tramite Internet (e.mail, chat, web) allo scopo di agevolare la comunicazione tra persone che operano sulla Rete o che preferiscono la consulenza on line. MediazioneOnLine intende offrire agli utenti il vantaggioso abbinamento dei due strumenti che, per loro natura, sono caratterizzati, entrambi, da: rapidit√†, semplicit√†, efficacia. Gli operatori virtuali possono dunque avvantaggiarsi dell'intervento di un terzo neutrale che agisca nello stesso ambiente. 
 
 <br><br><br>
 
 <li><b>Come funziona MediazioneOnline?</b>
 <br><br>
-Il mediatore di MediazioneOnLine riceve il vostro Form di Richiesta tramite e.mail e si mette nuovamente in contatto con voi (e con l'altra parte, nel caso la vostra richiesta verta su un problema con un'altro soggetto). Se necessario il mediatore porr‡ ad entrambi delle domande, per conoscere meglio il caso. Una volta che i fatti e gli interessi siano stati chiariti, il mediatore cercher‡ di individuare una soluzione possibile e la sottoporr‡ alla/alle parte/i. Se queste sono daccordo, il mediatore rediger‡ il testo del Contratto/Accordo e lo invier‡ alla/e parte/i.
+Il mediatore di MediazioneOnLine riceve il vostro Form di Richiesta tramite e.mail e si mette nuovamente in contatto con voi (e con l'altra parte, nel caso la vostra richiesta verta su un problema con un'altro soggetto). Se necessario il mediatore porr√† ad entrambi delle domande, per conoscere meglio il caso. Una volta che i fatti e gli interessi siano stati chiariti, il mediatore cercher√† di individuare una soluzione possibile e la sottoporr√† alla/alle parte/i. Se queste sono daccordo, il mediatore rediger√† il testo del Contratto/Accordo e lo invier√† alla/e parte/i.
 
 <br><br><br>
 
-<li><b>Chi puÚ servirsi di MediazioneOnline?</b>
+<li><b>Chi pu√≤ servirsi di MediazioneOnline?</b>
 <br><br>
-Il Richiedente del servizio di MediazioneOnLine deve avere la maggiore et‡ e la capacit‡ di agire: sono quindi esclusi i minori e gli incapaci, se non affincati da un tutore che li rappresenti. Il servizio di mediazione si rivolge alle singole persone o ad organizzazioni, come le aziende commerciali, a gruppi di persone che agiscono tramite un rappresentante (es. un partito politico, un gruppo ambientalista, un condominio) o che desiderano un coordinatore. 
+Il Richiedente del servizio di MediazioneOnLine deve avere la maggiore et√† e la capacit√† di agire: sono quindi esclusi i minori e gli incapaci, se non affincati da un tutore che li rappresenti. Il servizio di mediazione si rivolge alle singole persone o ad organizzazioni, come le aziende commerciali, a gruppi di persone che agiscono tramite un rappresentante (es. un partito politico, un gruppo ambientalista, un condominio) o che desiderano un coordinatore. 
 
 <br><br><br>
 
 <li><b>Quando funziona MediazioneOnLine?</b>
 <br><br>
 
-Il Form di Richiesta Ë sempre disponibile sul Web. Una volta che sia stato inoltrato il messaggio, il mediatore risponder‡ nel pi˘ breve tempo possibile. 
+Il Form di Richiesta √® sempre disponibile sul Web. Una volta che sia stato inoltrato il messaggio, il mediatore risponder√† nel pi√π breve tempo possibile. 
 
 <br><br><br>
 
@@ -94,17 +96,17 @@ Il Form di Richiesta Ë sempre disponibile sul Web. Una volta che sia stato inolt
 <li><b>Quanto costa servirsi di MediazioneOnLine?</b>
 <br><br>
 
-MediazioneOnLine propone alla comunit‡ virtuale una variegata offerta di servizi, il cui costo varia, naturalmente, a seconda del servizio scelto, della natura e della complessit‡ della richiesta. Esso Ë, tuttavia, contenuto e conveniente, anche per l'ammontare delle somme che vengono risparmiate ricorrendo a MediazioneOnLine; solo per fare alcuni esempi: spese di consulenza professionale, spese dovute al tempo perso, spese di perdita di immagine e di rifidelizzazione, spese dovute alla ricerca di nuovi fornitori o di altri referenti con cui non si sia raggiunta una proficua comunicazione. 
+MediazioneOnLine propone alla comunit√† virtuale una variegata offerta di servizi, il cui costo varia, naturalmente, a seconda del servizio scelto, della natura e della complessit√† della richiesta. Esso √®, tuttavia, contenuto e conveniente, anche per l'ammontare delle somme che vengono risparmiate ricorrendo a MediazioneOnLine; solo per fare alcuni esempi: spese di consulenza professionale, spese dovute al tempo perso, spese di perdita di immagine e di rifidelizzazione, spese dovute alla ricerca di nuovi fornitori o di altri referenti con cui non si sia raggiunta una proficua comunicazione. 
 <p>
-Per ogni richiesta, il mediatore presenter‡ all'utente un preventivo di tempo e di spesa necessari.
+Per ogni richiesta, il mediatore presenter√† all'utente un preventivo di tempo e di spesa necessari.
 </p>
 <br><br><br>
 
 
 
-<li><b>PerchË rivolgersi a MediazioneOnLine?</b>
+<li><b>Perch√® rivolgersi a MediazioneOnLine?</b>
 <br><br>
-PerchË MediazioneOnLine riduce le distanze fisiche tra persone che agiscono ed operano in ambiente virtuale e che hanno avuto contatto tramite Internet. E' pertanto pi˘ che naturale che i loro rapporti possano proseguire tramite Internet anche allo scopo di creare o rafforzare un accordo, superare un contrasto o risolvere una disputa. Analogamente, per chi volesse una consulenza personale, il rapporto diretto e personale con il mediatore, la garanzia di riservatezza che MediazioneOnline assicura, la immediatezza del mezzo, fanno di MediazioneOnLine un servizio utile e personalizzato. 
+Perch√® MediazioneOnLine riduce le distanze fisiche tra persone che agiscono ed operano in ambiente virtuale e che hanno avuto contatto tramite Internet. E' pertanto pi√π che naturale che i loro rapporti possano proseguire tramite Internet anche allo scopo di creare o rafforzare un accordo, superare un contrasto o risolvere una disputa. Analogamente, per chi volesse una consulenza personale, il rapporto diretto e personale con il mediatore, la garanzia di riservatezza che MediazioneOnline assicura, la immediatezza del mezzo, fanno di MediazioneOnLine un servizio utile e personalizzato. 
 
 </ul>
 
@@ -122,7 +124,7 @@ PerchË MediazioneOnLine riduce le distanze fisiche tra persone che agiscono ed o
 <font size="2" face="arial"><b>
 <font size="3"><A class="asimple" HREF="medonline.htm">MediazioneOnLine</A></font>
 <br>
-<font size="1"><A class="asimple" HREF="../eulab/legal_it.htm" target="cop">Copyright ©</a> since 1999 by <a class="asimple" href="../sandra.htm" target="san">Sandra Di Sebastiano</a><br>All Rights Reserved<font>
+<font size="1"><A class="asimple" HREF="../eulab/legal_it.htm" target="cop">Copyright ¬©</a> since 1999 by <a class="asimple" href="../sandra.htm" target="san">Sandra Di Sebastiano</a><br>All Rights Reserved<font>
 <br>
 <A class="asimple" HREF="../sandra.htm" target="san"><IMG SRC="mail.gif" border=0></A>
 </b></font>
