--- a/lab/mol/formed.htm
+++ b/lab/mol/formed.htm
@@ -4,12 +4,14 @@
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="hyperlinker_style.css" type="text/css">
 
-<meta name="description" content="La mediazione: uno strumento per creare alleanze. La mediazione è uno degli strumenti più funzionali per costruire solide relazioni, negoziare affari,
-superare difficoltà, comunicare efficacemente.">
+<meta name="description" content="La mediazione: uno strumento per creare alleanze. La mediazione Ã¨ uno degli strumenti piÃ¹ funzionali per costruire solide relazioni, negoziare affari,
+superare difficoltÃ , comunicare efficacemente.">
 
-<meta name="keywords" content="mediazione, meditazione, consulenza, giustizia alternativa, conciliazione, arbitrato, negoziato, comunicazione, Camera Arbitrale, giustizia, pace, autotutela, terzo neutrale, mediator, consulenza aziendale, azienda, costi, divorzio, separazione, coniugi, figli, accordi, dialogo, avvocato, mediazione familiare, conflitto, lite, disputa, problema, giudice di pace, costruzione, atto, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, società, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, spiritual growth, society, ">
+<meta name="keywords" content="mediazione, meditazione, consulenza, giustizia alternativa, conciliazione, arbitrato, negoziato, comunicazione, Camera Arbitrale, giustizia, pace, autotutela, terzo neutrale, mediator, consulenza aziendale, azienda, costi, divorzio, separazione, coniugi, figli, accordi, dialogo, avvocato, mediazione familiare, conflitto, lite, disputa, problema, giudice di pace, costruzione, atto, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societÃ , mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, spiritual growth, society, ">
 
 <TITLE>MediazioneOnLine</TITLE>
 
@@ -35,7 +37,7 @@ superare difficoltà, comunicare efficacemente.">
 
 <FONT face="verdana" size="3">
 
-Il funzionamento di <font color="navy"><b>MediazioneOnLine</b></font> e' molto semplice: basta compilare il seguente Form di Richiesta ed attendere che il Mediatore si metta in contatto con voi tramite la e.mail da voi stessi indicata. Si prega di essere il più precisi possibili nell'illustrare le circostanze ed il motivo della vostra richiesta: in questo modo il Mediatore potrà svolgere un servizio più efficiente.
+Il funzionamento di <font color="navy"><b>MediazioneOnLine</b></font> e' molto semplice: basta compilare il seguente Form di Richiesta ed attendere che il Mediatore si metta in contatto con voi tramite la e.mail da voi stessi indicata. Si prega di essere il piÃ¹ precisi possibili nell'illustrare le circostanze ed il motivo della vostra richiesta: in questo modo il Mediatore potrÃ  svolgere un servizio piÃ¹ efficiente.
 
 <P>
 Prima di compilare il Form di Richiesta, si prega di leggere attentamente le <a href="condmol.htm">Condizioni d'uso</a> del Servizio di MediazioneOnLine. Sono inoltre disponibili le <a href="faq.htm">Faq</a> del Servizio. 
@@ -53,7 +55,7 @@ Prima di compilare il Form di Richiesta, si prega di leggere attentamente le <a 
 
 <FONT SIZE="3">
 
-Al fine di riempire il seguente questionario in tutta tranquillità, anche senza essere connessi in rete, e di poter conservare quanto si è scritto nel proprio archivio personale, è possibile selezionare l'intero contenuto del form (Ctrl A, oppure Ctrl 5), copiarlo (Ctrl C) ed incollarlo (Ctrl V) in un messaggio da spedire poi alla nostra <a href="mailmed.htm">e.mail</a>.
+Al fine di riempire il seguente questionario in tutta tranquillitÃ , anche senza essere connessi in rete, e di poter conservare quanto si Ã¨ scritto nel proprio archivio personale, Ã¨ possibile selezionare l'intero contenuto del form (Ctrl A, oppure Ctrl 5), copiarlo (Ctrl C) ed incollarlo (Ctrl V) in un messaggio da spedire poi alla nostra <a href="mailmed.htm">e.mail</a>.
 
 </FONT>
 
@@ -77,7 +79,7 @@ Al fine di riempire il seguente questionario in tutta tranquillità, anche senza 
 <br><FONT SIZE="2" face="verdana">Vostro messaggio:</FONT><br>
 <TEXTAREA NAME="messaggio" COLS="55" ROWS="8">
 
-Qual è esattamente il suo problema?
+Qual Ã¨ esattamente il suo problema?
 
 
 
@@ -97,7 +99,7 @@ Gentilmente, la preghiamo di dare una breve ma chiara descrizione del caso:
 
 
 
-Quali sono esattamente le sue aspettative, i suoi desideri, i suoi interessi, i suoi obiettivi, le sue necessità?
+Quali sono esattamente le sue aspettative, i suoi desideri, i suoi interessi, i suoi obiettivi, le sue necessitÃ ?
 
 
 
@@ -145,7 +147,7 @@ Altro:
 <center>
 
 <font size="3"><i><b>
-Naturalmente, ogni informazione da voi fornita a MediazioneOnLine sarà ritenuta strettamente confidenziale e riservata, ed utilizzata esclusivamente ai fini e nei limiti del servizio qui offerto.
+Naturalmente, ogni informazione da voi fornita a MediazioneOnLine sarÃ  ritenuta strettamente confidenziale e riservata, ed utilizzata esclusivamente ai fini e nei limiti del servizio qui offerto.
 </i></b></font>
 
 </center>
@@ -158,7 +160,7 @@ Naturalmente, ogni informazione da voi fornita a MediazioneOnLine sarà ritenuta 
 <font size="2" face="arial"><b>
 <font size="3"><A class="asimple" HREF="medonline.htm">MediazioneOnLine</A></font>
 <br>
-<font size="1"><A class="asimple" HREF="../eulab/legal_it.htm" target="cop">Copyright ©</a> since 1999 by <a class="asimple" href="../sandra.htm" target="san">Sandra Di Sebastiano</a><br>All Rights Reserved<font>
+<font size="1"><A class="asimple" HREF="../eulab/legal_it.htm" target="cop">Copyright Â©</a> since 1999 by <a class="asimple" href="../sandra.htm" target="san">Sandra Di Sebastiano</a><br>All Rights Reserved<font>
 <br>
 <A class="asimple" HREF="../sandra.htm" target="san"><IMG SRC="mail.gif" border=0></A>
 </b></font>
