--- a/lab/mol/index.htm
+++ b/lab/mol/index.htm
@@ -2,12 +2,14 @@
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="hyperlinker_style.css" type="text/css">
 
-<meta name="description" content="La mediazione: uno strumento per creare alleanze. La mediazione è uno degli strumenti più funzionali per costruire solide relazioni, negoziare affari,
-superare difficoltà, comunicare efficacemente.">
+<meta name="description" content="La mediazione: uno strumento per creare alleanze. La mediazione Ã¨ uno degli strumenti piÃ¹ funzionali per costruire solide relazioni, negoziare affari,
+superare difficoltÃ , comunicare efficacemente.">
 
-<meta name="keywords" content="mediazione, meditazione, consulenza, giustizia alternativa, conciliazione, arbitrato, negoziato, comunicazione, Camera Arbitrale, giustizia, pace, autotutela, terzo neutrale, mediator, consulenza aziendale, azienda, costi, divorzio, separazione, coniugi, figli, accordi, dialogo, avvocato, mediazione familiare, conflitto, lite, disputa, problema, giudice di pace, costruzione, atto, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, società, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, spiritual growth, society, ">
+<meta name="keywords" content="mediazione, meditazione, consulenza, giustizia alternativa, conciliazione, arbitrato, negoziato, comunicazione, Camera Arbitrale, giustizia, pace, autotutela, terzo neutrale, mediator, consulenza aziendale, azienda, costi, divorzio, separazione, coniugi, figli, accordi, dialogo, avvocato, mediazione familiare, conflitto, lite, disputa, problema, giudice di pace, costruzione, atto, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societÃ , mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, spiritual growth, society, ">
 
 <TITLE>MediazioneOnLine</TITLE>
 
