--- a/lab/mol/links.htm
+++ b/lab/mol/links.htm
@@ -1,5 +1,8 @@
 <html>
+
 <head>
+
+<meta charset="utf-8">
 
 <link rel=stylesheet href="hyperlinker_style.css" type="text/css">
 
@@ -70,7 +73,7 @@ Mediazione in Italia:
 <li><A HREF="http://www.spc.it/approfMF.htm" target="newwindow">Scuola di Psicoterapia Comparata</a>
 <li><A HREF="http://www.aicounselling.it/atti/atti.htm" target="newwindow">Societa' italiana di counselling</a>
 <li><A HREF="http://www.geocities.com/CapitolHill/5056/tribmin.htm" target="newwindow">Tribunale di Bari - mediazione istituzionale penale e civile</a>
-<li><A HREF="http://scuola2.psi.uniroma1.it/malagoli/home_page.htm " target="newwindow">Università degli studi di Roma "La Sapienza"</a>
+<li><A HREF="http://scuola2.psi.uniroma1.it/malagoli/home_page.htm " target="newwindow">UniversitÃ  degli studi di Roma "La Sapienza"</a>
 <li><A HREF="http://www.geocities.com/~suares/forum" target="newwindow">World Mediation Forum</a>
 
 </ul>
@@ -122,7 +125,7 @@ Vuole suggerire un sito? Ci spedisca un e.mail e saremo lieti di aggiungerlo in 
 <font size="2" face="arial"><b>
 <font size="3"><A class="asimple" HREF="medonline.htm">MediazioneOnLine</A></font>
 <br>
-<font size="1"><A class="asimple" HREF="../eulab/legal_it.htm" target="cop">Copyright ©</a> since 1999 by <a class="asimple" href="../sandra.htm" target="san">Sandra Di Sebastiano</a><br>All Rights Reserved<font>
+<font size="1"><A class="asimple" HREF="../eulab/legal_it.htm" target="cop">Copyright Â©</a> since 1999 by <a class="asimple" href="../sandra.htm" target="san">Sandra Di Sebastiano</a><br>All Rights Reserved<font>
 <br>
 <A class="asimple" HREF="../sandra.htm" target="san"><IMG SRC="mail.gif" border=0></A>
 </b></font>
