--- a/lab/mol/mdzn.htm
+++ b/lab/mol/mdzn.htm
@@ -2,12 +2,14 @@
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="hyperlinker_style.css" type="text/css">
 
-<meta name="description" content="La mediazione: uno strumento per creare alleanze. La mediazione è uno degli strumenti più funzionali per costruire solide relazioni, negoziare affari,
-superare difficoltà, comunicare efficacemente.">
+<meta name="description" content="La mediazione: uno strumento per creare alleanze. La mediazione Ã¨ uno degli strumenti piÃ¹ funzionali per costruire solide relazioni, negoziare affari,
+superare difficoltÃ , comunicare efficacemente.">
 
-<meta name="keywords" content="mediazione, meditazione, consulenza, giustizia alternativa, conciliazione, arbitrato, negoziato, comunicazione, Camera Arbitrale, giustizia, pace, autotutela, terzo neutrale, mediator, mediatrix, consulenza aziendale, azienda, costi, divorzio, separazione, coniugi, figli, accordi, dialogo, avvocato, mediazione familiare, conflitto, lite, disputa, problema, giudice di pace, costruzione, atto, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, società, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, spiritual growth, society, mediazione trasformativa, trasformative mediation, The Conflict Research Consortium, University of Colorado, Dispute Resolution">
+<meta name="keywords" content="mediazione, meditazione, consulenza, giustizia alternativa, conciliazione, arbitrato, negoziato, comunicazione, Camera Arbitrale, giustizia, pace, autotutela, terzo neutrale, mediator, mediatrix, consulenza aziendale, azienda, costi, divorzio, separazione, coniugi, figli, accordi, dialogo, avvocato, mediazione familiare, conflitto, lite, disputa, problema, giudice di pace, costruzione, atto, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societÃ , mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, spiritual growth, society, mediazione trasformativa, trasformative mediation, The Conflict Research Consortium, University of Colorado, Dispute Resolution">
 
 <TITLE>MediazioneOnLine</TITLE>
 
@@ -29,7 +31,7 @@ superare difficoltà, comunicare efficacemente.">
 
 <br><br><br>
 
-<h5>Copyright ©since 1998 by Sandra Di Sebastiano</a></h5>
+<h5>Copyright Â©since 1998 by Sandra Di Sebastiano</a></h5>
 
 
 </center>
@@ -38,7 +40,7 @@ superare difficoltà, comunicare efficacemente.">
 
 <FONT size="2">
 
-La mediazione, quale oggi si intende, è il
+La mediazione, quale oggi si intende, Ã¨ il
 risultato di una lunga serie di esperienze e
 di ricerche, elaborate nel corso di alcuni
 decenni, che hanno permesso di definire
@@ -50,20 +52,20 @@ conflittuali.
 
 <br><br>
 
-La mediazione è pertanto utile a:
+La mediazione Ã¨ pertanto utile a:
 
 <ul>
 
-<li>chi svolge un’attività di impresa, per
+<li>chi svolge unÂ’attivitÃ  di impresa, per
 creare rapporti basati su cooperazione,
 comunicazione e chiarezza con clienti,
 fornitori, partners e dipendenti, e per
-dirimere con rapidità e sicurezza
+dirimere con rapiditÃ  e sicurezza
 eventuali contrapposizioni;
 
 <br><br>
 
-<li>chi svolge un’attività commerciale, per
+<li>chi svolge unÂ’attivitÃ  commerciale, per
 creare solidi rapporti con fornitori e
 clienti, consumatori e collaboratori, e
 per far fronte a possibili problemi o
@@ -84,7 +86,7 @@ pre e post matrimoniali);
 in una situazione difficile e volesse
 risolverlo al di fuori delle Corti di
 giustizia con uno strumento flessibile e
-capace di offrire opportunità specifiche
+capace di offrire opportunitÃ  specifiche
 per ogni situazione;
 
 <br><br>
@@ -101,11 +103,11 @@ procedimento estremamente valido.
 
 La mediazione riesce a soddisfare
 molteplici esigenze grazie alle sue
-caratteristiche, in quanto essa è:
+caratteristiche, in quanto essa Ã¨:
 
 <ul>
 
-<li><b>semplice</b>: la richiesta di avvio e l’intero
+<li><b>semplice</b>: la richiesta di avvio e lÂ’intero
 procedimento non richiedono atti
 formali; 
 
@@ -124,13 +126,13 @@ dovuti alla permanenza della lite;
 
 <li><b>riservata</b>: il procedimento di
 mediazione si svolge al riparo da ogni
-forma di pubblicità;
+forma di pubblicitÃ ;
 
 <br><br>
 
-<li><b>volontaria</b>: l’avvio della mediazione, il
+<li><b>volontaria</b>: lÂ’avvio della mediazione, il
 suo proseguimento e la decisione finale
-poggiano decisamente sulla volontà
+poggiano decisamente sulla volontÃ 
 delle parti;
 
 <br><br>
@@ -147,7 +149,7 @@ si svolgono al di fuori delle Corti di
 giustizia e che quindi sostituiscono con
 il metodo collaborativo quello
 avversariale, tipico dei procedimenti
-giurisdizionali. Ciò permette ai soggetti
+giurisdizionali. CiÃ² permette ai soggetti
 del rapporto di concentrarsi nella
 ricerca di soluzioni utili ed efficaci per
 entrambi, piuttosto che nel tentativo di
@@ -158,11 +160,11 @@ ostacolarsi a vicenda.
 <br>
 
 Il procedimento di mediazione avviene
-tramite l’intervento di un mediatore, al
+tramite lÂ’intervento di un mediatore, al
 quale spetta il compito di agevolare il
 dialogo e di aiutare le persone, che a lui si
 rivolgono, a manifestare i propri interessi,
-ad individuare esigenze, necessità e
+ad individuare esigenze, necessitÃ  e
 desideri, e quindi sviluppare relative
 proposte valide, per raggiungere infine un
 accordo pienamente soddisfacente. 
@@ -188,7 +190,7 @@ singole parti ed il mediatore.
 
 Questi incontri permettono al mediatore e
 alle parti di mettere a fuoco i problemi
-concreti e reali, e le effettive difficoltà che
+concreti e reali, e le effettive difficoltÃ  che
 devono essere appianate; consentono
 inoltre a ciascuna persona di manifestare i
 propri interessi e bisogni, grazie al ruolo
@@ -197,14 +199,14 @@ confronto pacifico e costruttivo.
 
 <br><br>
 
-Scopo della mediazione è 
+Scopo della mediazione Ã¨ 
 aiutare le persone a dedicare il tempo
 necessario e la giusta attenzione a quel
 particolare momento  della propria vita; 
-contribuire a far sì che le persone
+contribuire a far sÃ¬ che le persone
 esprimano le proprie ragioni in maniera
 comprensibile per chi ascolta, e 
-ascoltino le ragioni altrui in modo più
+ascoltino le ragioni altrui in modo piÃ¹
 efficace di come abbiano fatto prima; 
 creare le basi per un accordo
 volontario, funzionale e durevole.
@@ -212,25 +214,25 @@ volontario, funzionale e durevole.
 <br><br>
 
 Largamente usata nei paesi anglosassoni,
-la mediazione ha una elevata possibilità di
+la mediazione ha una elevata possibilitÃ  di
 successo. Essa si pone come uno
 strumento concreto, strutturato e flessibile,
 mirato e inclusivo, basato su
 comprensione, gentilezza, rispetto
-reciproco e costruttiva creatività. Le
-persone possono finalmente parlare più a
+reciproco e costruttiva creativitÃ . Le
+persone possono finalmente parlare piÃ¹ a
 lungo e direttamente fra loro; le relazioni
 possono essere variamente modellate su
 misura delle parti; i problemi vengono
 specificati, scomposti ed ordinati per
 essere compresi a fondo e ricomposti
-nell’interesse di tutti.
+nellÂ’interesse di tutti.
 
 <br><br>
 
-Pur nella sua estrema semplicità, la
+Pur nella sua estrema semplicitÃ , la
 mediazione presenta notevoli varianti, in
-cui il ruolo del mediatore può essere più o
+cui il ruolo del mediatore puÃ² essere piÃ¹ o
 meno incisivo e direttivo, per far fronte alle
 diverse, innumerevoli, specifiche esigenze.
 
@@ -252,7 +254,7 @@ diverse, innumerevoli, specifiche esigenze.
 <font size="2" face="arial"><b>
 <font size="3"><A class="asimple" HREF="medonline.htm">MediazioneOnLine</A></font>
 <br>
-<font size="1"><A class="asimple" HREF="../eulab/legal_it.htm" target="cop">Copyright ©</a> since 1999 by <a class="asimple" href="../sandra.htm" target="san">Sandra Di Sebastiano</a><br>All Rights Reserved<font>
+<font size="1"><A class="asimple" HREF="../eulab/legal_it.htm" target="cop">Copyright Â©</a> since 1999 by <a class="asimple" href="../sandra.htm" target="san">Sandra Di Sebastiano</a><br>All Rights Reserved<font>
 <br>
 <A class="asimple" HREF="../sandra.htm" target="san"><IMG SRC="mail.gif" border=0></A>
 </b></font>
