--- a/lab/mol/sp-online.htm
+++ b/lab/mol/sp-online.htm
@@ -4,12 +4,14 @@
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="hyperlinker_style.css" type="text/css">
 
-<meta name="description" content="La mediazione: uno strumento per creare alleanze. La mediazione è uno degli strumenti più funzionali per costruire solide relazioni, negoziare affari,
-superare difficoltà, comunicare efficacemente.">
+<meta name="description" content="La mediazione: uno strumento per creare alleanze. La mediazione Ã¨ uno degli strumenti piÃ¹ funzionali per costruire solide relazioni, negoziare affari,
+superare difficoltÃ , comunicare efficacemente.">
 
-<meta name="keywords" content="mediazione, meditazione, consulenza, giustizia alternativa, conciliazione, arbitrato, negoziato, comunicazione, Camera Arbitrale, giustizia, pace, autotutela, terzo neutrale, mediator, consulenza aziendale, azienda, costi, famiglia, genitori, divorzio, separazione, coniugi, figli, accordi, dialogo, avvocato, mediazione familiare, conflitto, lite, disputa, problema, giudice di pace, costruzione, atto, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, società, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, spiritual growth, society, opportunita', soluzioni, ">
+<meta name="keywords" content="mediazione, meditazione, consulenza, giustizia alternativa, conciliazione, arbitrato, negoziato, comunicazione, Camera Arbitrale, giustizia, pace, autotutela, terzo neutrale, mediator, consulenza aziendale, azienda, costi, famiglia, genitori, divorzio, separazione, coniugi, figli, accordi, dialogo, avvocato, mediazione familiare, conflitto, lite, disputa, problema, giudice di pace, costruzione, atto, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societÃ , mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, spiritual growth, society, opportunita', soluzioni, ">
 
 <TITLE>MediazioneOnLine</TITLE>
 
@@ -48,7 +50,7 @@ superare difficoltà, comunicare efficacemente.">
 
 <FONT size="3">
 
-<font color="navy"><b>MediazioneOnLine</b></font> è un servizio permanente di mediazione, il cui scopo è facilitare il dialogo tra le persone, permettendo loro di raggiungere un accordo costruttivo, vantaggioso e durevole. MediazioneOnLine utilizza Internet come strumento per comunicare e superare i problemi legati alla distanza tra le parti.
+<font color="navy"><b>MediazioneOnLine</b></font> Ã¨ un servizio permanente di mediazione, il cui scopo Ã¨ facilitare il dialogo tra le persone, permettendo loro di raggiungere un accordo costruttivo, vantaggioso e durevole. MediazioneOnLine utilizza Internet come strumento per comunicare e superare i problemi legati alla distanza tra le parti.
 
 <br><br>
 
@@ -64,7 +66,7 @@ Esso offre:
 
 <li>servizio di mediazione di supporto per
 professionisti (avvocati, amministratori
-di condominio, medici e così via);
+di condominio, medici e cosÃ¬ via);
 
 <br><br>
 
@@ -106,7 +108,7 @@ dare consulenza di mediazione su specifiche questioni.
 <font size="2" face="arial"><b>
 <font size="3"><A class="asimple" HREF="medonline.htm">MediazioneOnLine</A></font>
 <br>
-<font size="1"><A class="asimple" HREF="../eulab/legal_it.htm" target="cop">Copyright ©</a> since 1999 by <a class="asimple" href="../sandra.htm" target="san">Sandra Di Sebastiano</a><br>All Rights Reserved<font>
+<font size="1"><A class="asimple" HREF="../eulab/legal_it.htm" target="cop">Copyright Â©</a> since 1999 by <a class="asimple" href="../sandra.htm" target="san">Sandra Di Sebastiano</a><br>All Rights Reserved<font>
 <br>
 <A class="asimple" HREF="../sandra.htm" target="san"><IMG SRC="mail.gif" border=0></A>
 </b></font>
