--- a/lab/mol/corsi.htm
+++ b/lab/mol/corsi.htm
@@ -2,12 +2,14 @@
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="hyperlinker_style.css" type="text/css">
 
-<meta name="description" content="La mediazione: uno strumento per creare alleanze. La mediazione è uno degli strumenti più funzionali per costruire solide relazioni, negoziare affari,
-superare difficoltà, comunicare efficacemente.">
+<meta name="description" content="La mediazione: uno strumento per creare alleanze. La mediazione Ã¨ uno degli strumenti piÃ¹ funzionali per costruire solide relazioni, negoziare affari,
+superare difficoltÃ , comunicare efficacemente.">
 
-<meta name="keywords" content="mediazione, meditazione, consulenza, giustizia alternativa, conciliazione, arbitrato, negoziato, comunicazione, Camera Arbitrale, giustizia, pace, autotutela, terzo neutrale, mediator, consulenza aziendale, azienda, costi, divorzio, separazione, coniugi, figli, accordi, dialogo, avvocato, mediazione familiare, conflitto, lite, disputa, problema, giudice di pace, costruzione, atto, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, società, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, spiritual growth, society, ">
+<meta name="keywords" content="mediazione, meditazione, consulenza, giustizia alternativa, conciliazione, arbitrato, negoziato, comunicazione, Camera Arbitrale, giustizia, pace, autotutela, terzo neutrale, mediator, consulenza aziendale, azienda, costi, divorzio, separazione, coniugi, figli, accordi, dialogo, avvocato, mediazione familiare, conflitto, lite, disputa, problema, giudice di pace, costruzione, atto, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societÃ , mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, spiritual growth, society, ">
 
 <TITLE>MediazioneOnLine</TITLE>
 
@@ -21,7 +23,7 @@ superare difficoltà, comunicare efficacemente.">
 
 <center>
 
-<FONT face="verdana" size="3">I seguenti corsi e seminari mirano a diffondere la conoscenza della mediazione in generale e applicata a specifici settori. Essi possono essere tenuti, a richiesta, in qualunque località italiana.
+<FONT face="verdana" size="3">I seguenti corsi e seminari mirano a diffondere la conoscenza della mediazione in generale e applicata a specifici settori. Essi possono essere tenuti, a richiesta, in qualunque localitÃ  italiana.
 </FONT>
 
 </center>
@@ -56,7 +58,7 @@ superare difficoltà, comunicare efficacemente.">
 <font size="2" face="arial"><b>
 <font size="3"><A class="asimple" HREF="medonline.htm">MediazioneOnLine</A></font>
 <br>
-<font size="1"><A class="asimple" HREF="../eulab/legal_it.htm" target="cop">Copyright ©</a> since 1999 by <a class="asimple" href="../sandra.htm" target="san">Sandra Di Sebastiano</a><br>All Rights Reserved<font>
+<font size="1"><A class="asimple" HREF="../eulab/legal_it.htm" target="cop">Copyright Â©</a> since 1999 by <a class="asimple" href="../sandra.htm" target="san">Sandra Di Sebastiano</a><br>All Rights Reserved<font>
 <br>
 <A class="asimple" HREF="../sandra.htm" target="san"><IMG SRC="mail.gif" border=0></A>
 </b></font>
